--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
